# kolokwium

zad3/: CMakeLists.txt
